# attract

./: .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  CNAME  Compile.md  Layouts.md  Makefile  Readme.md  Readme.txt  about.html  config.h.in  docs.html  download.html  fe_image.cpp  index.html  mess-a7800.cfg  mess-aes  mess-neocdz  mess-sms  mupen64plus.cfg  params.json  pcsx.cfg
.github/workflows/: ci.yml  release.yml
cmake/: PackageDeb.cmake
cmake/modules/: FindFFmpeg.cmake  FindFontConfig.cmake  FindFreetype.cmake  FindOpenAL.cmake  FindOpenGLES.cmake  FindSFML.cmake  FindXinerama.cmake  GetGitRevisionDescription.cmake  TargetArch.cmake
config/: default-display.cfg  default-emulator.cfg  default-filter.cfg  locale.msg
config/emulators/: Dolphin.cfg  daphne.cfg  default.cfg  fusion.cfg  gens.cfg  mame.cfg  mednafen.cfg  mess-a7800.cfg  mess-genesis.cfg  mess-neocdz.cfg  mess-snes.cfg  nestopia.cfg  pcsx.cfg  scumm-vm.cfg  snes9x.cfg  steam.cfg  vice.cfg  video-avi.cfg  video.cfg  windows_games.cfg  zsnes.cfg
config/intro/: intro.nut
config/language/: cn.msg  de.msg  en.msg  es.msg  fr.msg  fr.msg.needs-update  it.msg  jp.msg  kr.msg  msg_template.txt  pt_br.msg  tw.msg
config/layouts/: screensaver.nut
config/loader/: attract_xml.nut  hyperspin.nut  loader.nut  mala.nut  mamewah.nut
config/modules/: animate.nut  animlist.nut  conveyor.nut  fade.nut  file-format.nut  file-layout.nut  file.nut  history.nut  pan-and-scan.nut  preserve-art.nut  spritesheet.nut  submenu.nut
config/plugins/: AudioMode.nut  AutoRotate.nut  History.nut  KeyboardSearch.nut  KonamiCode.nut  LEDBlinky.nut  MultiMon.nut  ResFix.nut  RotationControl.nut  SpecificDisplay.nut  UltraStik360.nut  eSpeak.nut  espeak.nut  ledblinky.nut
config/screensaver/: screensaver.nut
debian/: attract.desktop  changelog  control  copyright  docs  install  rules
docs/: Compile.html  Layouts.html  Readme.html
docs/1.1/: Compile.html  Layouts.html  Readme.html
docs/1.2/: Compile.html  Layouts.html  Readme.html
docs/1.3/: Compile.html  Layouts.html  Readme.html
extlibs/: CMakeLists.txt
extlibs/audio/: CMakeLists.txt
extlibs/audio/Audio/: ALCheck.cpp  AudioDevice.cpp  Listener.cpp  SoundSource.cpp  SoundStream.cpp
extlibs/audio/include/Audio/: ALCheck.hpp  AudioDevice.hpp  Listener.hpp  SoundSource.hpp  SoundStream.hpp
extlibs/expat/: CMakeLists.txt
extlibs/gameswf/: CMakeLists.txt  compatibility_include.h
extlibs/gameswf/base/: GCBench.cpp  Stackwalker.cpp  Stackwalker.h  component_hackery.cpp  configvars.cpp  configvars.h  container.cpp  container.h  cschema.h  demo.cpp  demo.h  dlmalloc.c  dlmalloc.h  ear_clip_triangulate.h  ear_clip_triangulate_float.cpp  ear_clip_triangulate_impl.h  ear_clip_triangulate_sint16.cpp  file_util.cpp  file_util.h  grid_index.h  image.cpp  image.h  image_filters.cpp  jpeg.cpp  jpeg.h  logger.cpp  logger.h  membuf.cpp  membuf.h  ogl.cpp  ogl.h  png_helper.cpp  png_helper.h  postscript.cpp  postscript.h  smart_ptr.h  test_ogl.cpp  triangulate.h  triangulate_float.cpp  triangulate_impl.h  (+32 more)
extlibs/gameswf/gameswf/: NOTES.txt  TODO  gameswf.h  gameswf_abc.cpp  gameswf_abc.h  gameswf_action.cpp  gameswf_action.h  gameswf_as_sprite.cpp  gameswf_as_sprite.h  gameswf_avm2.cpp  gameswf_avm2.h  gameswf_avm2_jit.cpp  gameswf_batch_run.py  gameswf_batch_test.py  gameswf_button.cpp  gameswf_button.h  gameswf_canvas.cpp  gameswf_canvas.h  gameswf_character.cpp  gameswf_character.h  gameswf_disasm.cpp  gameswf_disasm.h  gameswf_dlist.cpp  gameswf_dlist.h  gameswf_environment.cpp  gameswf_environment.h  gameswf_filters.cpp  gameswf_filters.h  gameswf_font.cpp  gameswf_font.h  gameswf_fontlib.cpp  gameswf_fontlib.h  gameswf_freetype.cpp  gameswf_freetype.h  gameswf_function.cpp  gameswf_function.h  gameswf_impl.cpp  gameswf_impl.h  gameswf_jit.cpp  gameswf_jit.h  (+54 more)
extlibs/gameswf/gameswf/gameswf_as_classes/: as_array.cpp  as_array.h  as_boolean.cpp  as_boolean.h  as_broadcaster.cpp  as_broadcaster.h  as_class.cpp  as_class.h  as_color.cpp  as_color.h  as_color_transform.cpp  as_color_transform.h  as_date.cpp  as_date.h  as_event.cpp  as_event.h  as_flash.cpp  as_flash.h  as_geom.cpp  as_geom.h  as_global.cpp  as_global.h  as_key.cpp  as_key.h  as_loadvars.cpp  as_loadvars.h  as_math.cpp  as_math.h  as_matrix.cpp  as_matrix.h  as_mcloader.cpp  as_mcloader.h  as_mouse.cpp  as_mouse.h  as_mouse_event.cpp  as_mouse_event.h  as_netconnection.h  as_netstream.cpp  as_netstream.h  as_number.cpp  (+19 more)
extlibs/miniz/: miniz.c
extlibs/nowide/: CMakeLists.txt  console_buffer.cpp  console_buffer.hpp  cstdio.cpp  iostream.cpp
extlibs/nvapi/: CMakeLists.txt  nvapi.hpp  nvapi_definitions.hpp
extlibs/rapidjson/: CMakeLists.txt
extlibs/squirrel/: CMakeLists.txt  HISTORY
extlibs/squirrel/include/: squirrel.h
extlibs/squirrel/sqstdlib/: sqstdio.cpp
extlibs/squirrel/squirrel/: sqapi.cpp  sqbaselib.cpp  sqclass.cpp  sqcompiler.cpp  sqdebug.cpp  sqfuncstate.cpp  sqobject.cpp  sqobject.h  sqstate.cpp  sqtable.cpp  sqtable.h  sqvm.cpp
images/: png_no_image.hpp
os-x/: Readme-OS-X.txt
src/: CMakeLists.txt  attract.cbp  attract.exe.manifest  attract.rc  fe_base.cpp  fe_base.hpp  fe_blend.cpp  fe_blend.hpp  fe_build.cpp  fe_cmdline.cpp  fe_config.cpp  fe_config.hpp  fe_file.cpp  fe_file.hpp  fe_icon.hpp  fe_image.cpp  fe_image.hpp  fe_info.cpp  fe_info.hpp  fe_input.cpp  fe_input.hpp  fe_listbox.cpp  fe_listbox.hpp  fe_listxml.cpp  fe_listxml.hpp  fe_net.cpp  fe_net.hpp  fe_overlay.cpp  fe_overlay.hpp  fe_present.cpp  fe_present.hpp  fe_presentable.cpp  fe_presentable.hpp  fe_romlist.cpp  fe_romlist.hpp  fe_settings.cpp  fe_settings.hpp  fe_shader.cpp  fe_shader.hpp  fe_sound.cpp  (+44 more)
stylesheets/: stylesheet.css
util/: create-windows-pkg.sh  icon-rebuild.sh  lang.sh  output-changelog-md.sh
util/android/: AndroidManifest.xml  Readme.md  custom_rules.xml
util/linux/: attract-mode.appdata.xml  attract-mode.desktop
util/osx/: DS_Store  Info.plist  VolumeIcon.icns  attract.icns  bundlelibs.py  create-pkg.sh  launch.sh
util/win/: create-pkg.sh
win32/: attract.cbp
(+143 files in other folders)
